--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
     "next-cloudinary": "^6.9.0",
+    "path-to-regexp": "^6.3.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^10.0.0",
     "prettier": "^3.3.3",
@@ -47,6 +48,8 @@
     "react-select": "^5.8.0",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
+    "router": "^2.0.0",
+    "superstatic": "^9.0.3",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
